# spark-midi-bridge

./: .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.x86_64  README.md  build.sh  deploy.sh  install.sh  package.sh  uninstall.sh
.github/workflows/: release.yml
src/: config.rs  configurator.rs  led.rs  main.rs  midi.rs  spark.rs
