[package]
name = "spark_midi_bridge"
version = "1.0.1"
edition = "2021"
authors = ["jmsalazar"]
description = "Headless Spark MIDI Bridge for Raspberry Pi Zero"

[dependencies]
btleplug = "0.11.5"
midir = "0.9.1"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "time", "sync", "signal", "io-std", "io-util"] }
futures = "0.3.29"
uuid = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
log = "0.4"
env_logger = "0.10"
dialoguer = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
libdbus-sys = { version = "0.2.7", features = ["vendored"] }
rppal = "0.19"

[target.'cfg(target_os = "windows")'.dependencies]
midir = { version = "0.9.1", features = ["winrt"] }



